Updates from Overleaf

--- a/main.bib
+++ b/main.bib
@@ -2,6 +2,16 @@
    title="{Dense Wavelength Division Multiplexing}",
    howpublished={\newline \url{https://en.wikipedia.org/wiki/Wavelength-division_multiplexing}\EatDot}
    }
+   
+@misc{amd-epyc,
+   title="{AMD EPYC test server}",
+   howpublished={\newline R282-Z93 Gigabyte Server System 2xAMD EPYC
+7002 \\
+AMD EPYC 7742 Processor 64-core 2.25GHz 256MB Cache \\
+5 x PCIe4x16 1xM.2 \\
+Mellanox MCX516A-CDAT Mellanox NIC 100GbE Dual-Port
+QSFP28 PCIe4x16}
+   }
 
 @misc{da-design,
    title="{DA Design}",
@@ -315,3 +325,10 @@
         number = "10",
         year = "2014"
 }
+
+@misc{oai-pmh,
+  title="{The Open Archives Initiative Protocol for Metadata Harvesting}",
+  howpublished={\newline \url{http://www.openarchives.org/OAI/2.0/openarchivesprotocol.htm}\EatDot},
+  note="Accessed 13 Jan 2020"
+}
+
