Updates from Overleaf

--- a/fsru_data_rates.tex
+++ b/fsru_data_rates.tex
@@ -16,7 +16,7 @@
 & \multicolumn{5}{l}{\bf Maximum rate \WBW} \\
 \WBW{} (52 MSPS) & 10 & (16+16)$\times$2 & 33.3~Gb/s & 109 & 3.63~Tb/s \\
 \end{tabular}
-\caption{Data rates at \ED sites per FSRU and for whole site to the Ring Buffer memory.
+\caption{Data rates at \ED sites per FSRU and for whole site to the Ring Buffer memory. The \WBW\ maximum rate mode is not expected to be required by \ED.
 \label{tab:fsru-rates-all}}
 \end{table}
 \iffalse
