--- a/sbf-rates.tex
+++ b/sbf-rates.tex
@@ -29,6 +29,6 @@ RX & {\hfill \NBW{} (6.5~MSPS)}& 200 & (32+32)$\times$2 & 83~Gb/s \\
 TX/RX & {\hfill \WBW{} (52~MSPS)}& 40 & (32+32)$\times$2 & 133~Gb/s \\
 \
 \end{tabular}
-\caption{Data rates at \ED sites per FSRU and for whole site to the Ring Buffer memory.
+\caption{Data rates from the Second Beam Former procees at \ED sites.
 \label{tab:sbf-rates-all}}
 \end{table}
